--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
+    "@apollo/client": "^3.7.1",
     "@truffle/hdwallet-provider": "^2.1.2",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "antd": "^5.0.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "ethers": "^5.7.2",
+    "graphql": "^16.6.0",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-text-transition": "^3.0.2",
     "typescript": "4.9.3",
     "web3": "^1.7.4"
+  },
+  "devDependencies": {
+    "@graphprotocol/client-cli": "^2.2.15"
   }
 }
